--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\Vikas Mishra\Desktop\webdevelopment\site\vx\Vikas.png" alt="Vikas Mishra personal website" height="250" ,width="250"></td>
+      <td><img src="Vikas.png" alt="Vikas Mishra personal website" height="250" ,width="250"></td>
       <td>
         <h1>Vikas Mishra</h1>
         <p>Student of btech <strong><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/em>" target="_self">ccvt 1st year.</a></strong></p>
